gap fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,11 +141,10 @@ body {
 }
 @media only screen and (max-width: 23.4375em) {
   .card {
-    /* max-width: 32.7rem; */
-    max-width: 90%;
+    max-width: 32.7rem;
     padding: 2.4rem;
     margin: 11.6rem 2.4rem 0;
-    gap: 2.4rem;
+    gap: 2.8rem;
   }
 }
 .card-avatar {
