--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -13,7 +13,7 @@
     max-width: $mobile-width;
     padding: 2.4rem;
     margin: 11.6rem 2.4rem 0;
-    gap: 2.4rem;
+    gap: 2.8rem;
   }
   &-avatar {
     width: 8.8rem;
